# hamclubbot

./: .dockerignore  .gitignore  Brewfile  Dockerfile  LICENSE  README.md  bot.py  config.env.tmpl  config.json.tmpl  config.yaml.tmpl  pylintrc  pyproject.toml  requirements.txt  simplebot.py  webcache.py
.github/workflows/: docker-image.yml  publish-docker-image.yml
clubInfo/: meetings.md  nets.md  repeaters.md
config/: config.yaml.tmpl
extensions/: about.py  basecog.py  clubinfo.py  conditions.py  pota.py
extensions/util/: persistentstore.py  simplebot.py  views.py  webcache.py
src/hamclubbot/: __main__.py
src/hamclubbot/extensions/: about.py  clubinfo.py  conditions.py  pota.py
src/hamclubbot/extensions/util/: simplebot.py  views.py  webcache.py
tests/hamclubbot/extensions/util/: persistentstore_test.py  webcache_test.py
